--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    All colors are randomized.
+		    Press r to switch between random color mode and color pattern mode based on cursor position.
 	    </footer>
 	</body>
 </html>
